# RayTracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
header/: color.h  hittable.h  ray.h  vec4.h
header/hittables/: sphere.h
include/RayTracer/: camera.h  color.h  common.h  engine.h  hittable.h  material.h  ray.h  render.h  utility.h  vec3.h  vec4.h
include/RayTracer/hittables/: sphere.h
source/: vec4.cpp
src/: camera.cpp  engine.cpp  main.cpp  material.cpp  render.cpp  sphere.cpp
